--- a/Node/public/carrito.html
+++ b/Node/public/carrito.html
@@ -19,6 +19,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<!-- My JS -->
+<script src="js/inventario.js"></script>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
                         <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
-                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
+                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
                         <div class="dropdown-menu fondomenu ">
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
@@ -54,6 +56,7 @@
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
+                            <label class="contadorCarrito" id="numTotalProductos"></label>
                         </li>
                 </ul>
             </div>
@@ -70,48 +73,17 @@
       <div class="col-md-4 order-md-2 mb-4">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-muted">Tu cesta de la compra</span>
-          <span class="badge badge-secondary badge-pill">3</span>
+          <label class="contadorCarrito" id="numTotalProductos"></label>>
         </h4>
-        <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Producto</h6>
-              <small class="text-muted">Descripción</small>
-            </div>
-            <span class="text-muted">12€</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Producto</h6>
-              <small class="text-muted">Descripción</small>
-            </div>
-            <span class="text-muted">8€</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Producto</h6>
-              <small class="text-muted">Descripción</small>
-            </div>
-            <span class="text-muted">5€</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between bg-light">
-            <div class="text-success">
-              <h6 class="my-0">Código promocional</h6>
-              <small>EXAMPLECODE</small>
-            </div>
-            <span class="text-success">-5€</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Total</span>
-            <strong>20€</strong>
-          </li>
+        <ul class="list-group mb-3" id="listaCesta">
+          
         </ul>
 
         <form class="card p-2">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Promo code">
             <div class="input-group-append">
-              <button type="submit" class="btn btn-secondary">Redeem</button>
+              <button onclick="borrar()" class="btn btn-secondary">Borrar</button>
             </div>
           </div>
         </form>
@@ -247,7 +219,7 @@
             </div>
           </div>
           <hr class="mb-4">
-          <button class="btn btn-primary btn-lg btn-block" type="submit">Finalizar Compra</button>
+          <button class="btn btn-primary btn-lg btn-block" onclick="comprar()">Finalizar Compra</button>
         </form>
       </div>
     </div>
@@ -288,6 +260,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+  refrescarCarrito();
+</script>
 </body>
 
 </html>
