--- a/Node/public/iniciarSesion.html
+++ b/Node/public/iniciarSesion.html
@@ -18,6 +18,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<!-- My JS -->
+<script src="js/inventario.js"></script>
 </head>
 
 <body>
@@ -33,7 +35,7 @@
                         <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
-                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
+                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
                         <div class="dropdown-menu fondomenu ">
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
@@ -53,6 +55,7 @@
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
+                            <label class="contadorCarrito" id="numTotalProductos"></label>
                         </li>
                 </ul>
             </div>
@@ -118,6 +121,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+    refrescarCarrito();
+  </script>
 </body>
 
 </html>
