--- a/Node/public/landingPage.html
+++ b/Node/public/landingPage.html
@@ -7,7 +7,6 @@
 <title>Food-Eat! - Restaurantes en Elorrieta - </title>
 <meta name="description" content="Facilitamos a la hostelería de Elorrieta facilidades para promocionar su negocio">
 <meta name="keywords" content="restaurantes, bares, cafeterías, panaderías, tahonas, elorrieta, SanInacio, Bilbao, comida">
-<link rel="icon" href="imagenes/favicon.png">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -19,6 +18,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<!-- My JS -->
+<script src="js/inventario.js"></script>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                         <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
-                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
+                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
                         <div class="dropdown-menu fondomenu ">
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
@@ -54,6 +55,7 @@
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
+                            <label class="contadorCarrito" id="numTotalProductos"></label>
                         </li>
                 </ul>
             </div>
@@ -62,7 +64,6 @@
 </header>
 
 
-<main class="mt-4 container">
   <!--*************************************************************************************************-->  
   <main class="mt-4 container">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -79,11 +80,11 @@
                       <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Hamburguesa</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Queso, lechuga y tomate.</p>
                       </a>
                       </div>
                       <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(hamburguesa)">Añadir al carrito</button>
                       </div>
                     </div>
                     <div class="card producto">
@@ -91,24 +92,24 @@
                       <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Pizza</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <p class="card-text mb-5 pb-3">Mozzarella, tomate, orégano.</p>
                       </div>
                     </a>
+                      <div class="card-footer">
+                        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(pizza)">Añadir al carrito</button>
+                      </div>
                     </div>
                     <div class="card producto">
                       <a href="restaurante1.html" target="self">
                       <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <p class="card-text">Menú para dos.</p>
                       </div>
                     </a>
+                      <div class="card-footer">
+                        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menu)">Añadir al carrito</button>
+                      </div>
                     </div>
                   </div>
             </div>
@@ -121,10 +122,10 @@
                         <h5 class="card-title poiret">Menú del día</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
                     </a>
+                    <div class="card-footer">
+                      <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menuDia)">Añadir al carrito</button>
+                    </div>
                     </div>
                     <div class="card producto">
                       <a href="restaurante2.html" target="self">
@@ -133,10 +134,10 @@
                         <h5 class="card-title poiret">Comida casera</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                       </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
                     </a>
+                    <div class="card-footer">
+                      <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(casera)">Añadir al carrito</button>
+                    </div>
                     </div>
                     <div class="card producto">
                       <a href="restaurante2.html" target="self">
@@ -145,10 +146,10 @@
                         <h5 class="card-title poiret">Ensalada</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                       </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
                     </a>
+                    <div class="card-footer">
+                      <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(ensalada)">Añadir al carrito</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -240,6 +241,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+  refrescarCarrito();
+</script>
 </body>
 
 </html>
