--- a/Node/public/restaurante1.html
+++ b/Node/public/restaurante1.html
@@ -19,6 +19,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<!-- My JS -->
+<script src="js/inventario.js"></script>
 </head>
 
 <body class="restaurante1">
@@ -34,7 +36,7 @@
                         <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
-                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
+                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
                         <div class="dropdown-menu fondomenu ">
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
@@ -54,6 +56,7 @@
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
+                            <label class="contadorCarrito" id="numTotalProductos"></label>
                         </li>
                 </ul>
             </div>
@@ -67,7 +70,6 @@
   <!--*************************************************************************************************-->  
   <main class="mt-4 container">
         <div >
-
           <div class="card " style="width: 50rem ;  "  >
           <img src="/img/goikoGrill.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -77,8 +79,46 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
           </div>   
-
         </div>
+
+        <div class="card-deck mt-5">
+            <div class="card producto">
+              <a href="restaurante1.html" target="self">
+              <img class="card-img-top" src="../img/hamburger.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title poiret">Hamburguesa</h5>
+                <p class="card-text">Queso, lechuga y tomate.</p>
+              </a>
+              </div>
+              <div class="card-footer">
+                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(hamburguesa)">Añadir al carrito</button>
+              </div>
+            </div>
+            <div class="card producto">
+              <a href="restaurante1.html" target="self">
+              <img class="card-img-top" src="../img/pizza.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title poiret">Pizza</h5>
+                <p class="card-text mb-5 pb-3">Mozzarella, tomate, orégano.</p>
+              </div>
+            </a>
+              <div class="card-footer">
+                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(pizza)">Añadir al carrito</button>
+              </div>
+            </div>
+            <div class="card producto">
+              <a href="restaurante1.html" target="self">
+              <img class="card-img-top" src="../img/restaurant.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title poiret">Menú hamburguesa con patatas</h5>
+                <p class="card-text">Menú para dos.</p>
+              </div>
+            </a>
+              <div class="card-footer">
+                <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menu)">Añadir al carrito</button>
+              </div>
+            </div>
+          </div>
 </main>
 
 
@@ -117,6 +157,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+    refrescarCarrito();
+  </script>
 </body>
 
 </html>
