--- a/Node/public/restaurante2.html
+++ b/Node/public/restaurante2.html
@@ -19,6 +19,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 <!-- My CSS -->
 <link rel="stylesheet" href="./css/MyCss.css">
+<!-- My JS -->
+<script src="js/inventario.js"></script>
 </head>
 
 <body class="restaurante2">
@@ -34,7 +36,7 @@
                         <a class="nav-link active p-0 elmenu poiret" href="landingPage.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown elmenu px-2 px-lg-5 pt-1 pt-md-0 text-center">
-                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" href="nuestroslibros.html" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
+                        <a class="nav-link dropdown-toggle d-block p-0 elmenu poiret" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Restaurantes</a>
                         <div class="dropdown-menu fondomenu ">
                             <div class="row p-3">
                                 <p class="desplegablenolink col-12 poiret">Todos los restaurantes y cafeterías</p>
@@ -54,6 +56,7 @@
                         </li>
                         <li class="nav-item elmenu pl-2 pl-lg-2 pt-3 pt-md-0 text-center">
                             <a class="pl-md-5 fa fa-shopping-cart fa-lg pt-2" href="carrito.html" target="self"></a>
+                            <label class="contadorCarrito" id="numTotalProductos"></label>
                         </li>
                 </ul>
             </div>
@@ -62,130 +65,53 @@
 
 </header>
 
-
-<main class="mt-4 container">
   <!--*************************************************************************************************-->  
   <main class="mt-4 container">
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active slider">
-              <div class="card-deck">
-                <div class="card producto">
-                  <img class="card-img-top" src="../img/platos.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title poiret">Menú del día</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
-                </div>
-                <div class="card producto">
-                  <img class="card-img-top" src="../img/platos1.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title poiret">Comida casera</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </div>
-                </div>
-                <div class="card producto">
-                  <img class="card-img-top" src="../img/platos3.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title poiret">Ensalada</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-            </div>
-                    </div>
-                  </div>
-            
-            <div class="carousel-item slider">
-                <div class="card-deck">
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/platos.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Menú del día</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/platos1.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Comida casera</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/platos3.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Ensalada</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-              </div>
-        </div>
-            <div class="carousel-item slider">
-                <div class="card-deck">
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/tazas1.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/pinchos1.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                      </div>
-                    </div>
-                    <div class="card producto">
-                      <img class="card-img-top" src="../img/pinchos2.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title poiret">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-              </div>
-        </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+    <div>
+      <img src="img/restaurant2.jpg" class="restaurante2i">
+      <h2 class="poiret restaurante2"><b>Marmitako</b></h2>
+      <p class="card-text"><u>Direccion</u></p>
+      <p > calle Lehendakari Aguirre, 85 </p>
     </div>
+    <div class="card-deck">
+      <div class="card producto">
+        <a href="restaurante2.html" target="self">
+        <img class="card-img-top" src="../img/platos.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title poiret">Menú del día</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </a>
+      <div class="card-footer">
+        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(menuDia)">Añadir al carrito</button>
+      </div>
+      </div>
+      <div class="card producto">
+        <a href="restaurante2.html" target="self">
+        <img class="card-img-top" src="../img/platos1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title poiret">Comida casera</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </a>
+      <div class="card-footer">
+        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(casera)">Añadir al carrito</button>
+      </div>
+      </div>
+      <div class="card producto">
+        <a href="restaurante2.html" target="self">
+        <img class="card-img-top" src="../img/platos3.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title poiret">Ensalada</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+      </a>
+      <div class="card-footer">
+        <button class="form-button rounded button-l my-3 poiret" onclick="addProduct(ensalada)">Añadir al carrito</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     </section>
 <!--****************************************************************************************************-->
@@ -229,6 +155,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+  refrescarCarrito();
+</script>
 </body>
 
 </html>
